# OpenCV-Assessment

./: .gitattributes  .gitignore  GIT_SETUP.md  README.md  build.bat  build.gradle  build.sh  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp  opengl_renderer.cpp  opengl_renderer.h
app/src/main/java/com/edgedetection/viewer/: GLSurfaceViewRenderer.java  MainActivity.java  OpenGLRenderer.java
app/src/main/res/drawable/: button_gradient.xml  gradient_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
opencv/: build.gradle
web/: README.md  index.html  package.json  styles.css
web/src/: index.ts  viewer.ts
